--- a/public/pages/contact.html
+++ b/public/pages/contact.html
@@ -17,9 +17,9 @@
                 <div class="bar"></div>
                 <a href="../index.html">LE CLUB</a>
                 <div class="bar"></div>
-                <a href="teams.html">EQUIPES</a>
+                <a href="equipes.html">EQUIPES</a>
                 <div class="bar"></div>
-                <a href="events.html">EVENEMENTS</a>
+                <a href="evenements.html">EVENEMENTS</a>
                 <div class="bar"></div>
             </div>
 
@@ -41,9 +41,9 @@
 
             <div class="right-content">
                 <div class="bar"></div>
-                <a  href="store.html">BOUTIQUE</a>
+                <a  href="boutique.html">BOUTIQUE</a>
                 <div class="bar"></div>
-                <a href="registration.html">INSCRIPTION</a>
+                <a href="inscription.html">INSCRIPTION</a>
                 <div class="bar"></div>
                 <a  href="contact.html">CONTACT</a>
                 <div class="bar"></div>
@@ -54,10 +54,10 @@
             <div class="nav-menu">
                 <h2>NAVIGATION</h2>
                 <a href="../index.html">LE CLUB</a>
-                <a href="teams.html">EQUIPES</a>
-                <a href="events.html">EVENEMENTS</a>
-                <a href="store.html">BOUTIQUE</a>
-                <a href="store.html">INSCRIPTION</a>
+                <a href="equipes.html">EQUIPES</a>
+                <a href="evenements.html">EVENEMENTS</a>
+                <a href="boutique.html">BOUTIQUE</a>
+                <a href="inscription.html">INSCRIPTION</a>
                 <a href="contact.html">CONTACT</a>
             </div>
                 
@@ -152,9 +152,11 @@
                 <div class="footer-links">
                     <h4>NAVIGATION</h4>
                     <a href="../index.html">LE CLUB</a>
-                    <a href="teams.html">EQUIPES</a>
-                    <a href="events.html">EVENEMENTS</a>
-                    <a href="store.html">BOUTIQUE</a>
+                    <a href="equipes.html">EQUIPES</a>
+                    <a href="evenements.html">EVENEMENTS</a>
+                    <a href="boutique.html">BOUTIQUES</a>
+                    <a href="inscription.html">INSCRIPTION</a>
+                    <a href="contact.html">CONTACT</a>
                 </div>
                 <div class="footer-contact">
                     <h4>CONTACT</h4>
