--- a/public/index.html
+++ b/public/index.html
@@ -16,9 +16,9 @@
                 <div class="bar"></div>
                 <a href="index.html">LE CLUB</a>
                 <div class="bar"></div>
-                <a href="pages/teams.html">EQUIPES</a>
+                <a href="pages/equipes.html">EQUIPES</a>
                 <div class="bar"></div>
-                <a href="pages/events.html">EVENEMENTS</a>
+                <a href="pages/evenements.html">EVENEMENTS</a>
                 <div class="bar"></div>
             </div>
 
@@ -42,7 +42,7 @@
                 <div class="bar"></div>
                 <a  href="pages/store.html">BOUTIQUE</a>
                 <div class="bar"></div>
-                <a href="pages/registration.html">INSCRIPTION</a>
+                <a href="pages/inscription.html">INSCRIPTION</a>
                 <div class="bar"></div>
                 <a  href="pages/contact.html">CONTACT</a>
                 <div class="bar"></div>
@@ -53,10 +53,10 @@
             <div class="nav-menu">
                 <h2>NAVIGATION</h2>
                 <a href="index.html">LE CLUB</a>
-                <a href="pages/teams.html">EQUIPES</a>
-                <a href="pages/events.html">EVENEMENTS</a>
+                <a href="pages/equipes.html">EQUIPES</a>
+                <a href="pages/evenements.html">EVENEMENTS</a>
                 <a href="pages/store.html">BOUTIQUE</a>
-                <a href="pages/store.html">INSCRIPTION</a>
+                <a href="pages/inscription.html">INSCRIPTION</a>
                 <a href="pages/contact.html">CONTACT</a>
             </div>
                 
@@ -241,10 +241,10 @@
                 <div class="footer-links">
                     <h4>NAVIGATION</h4>
                     <a href="index.html">LE CLUB</a>
-                    <a href="pages/teams.html">EQUIPES</a>
-                    <a href="pages/events.html">EVENEMENTS</a>
+                    <a href="pages/equipes.html">EQUIPES</a>
+                    <a href="pages/evenements.html">EVENEMENTS</a>
                     <a href="pages/store.html">BOUTIQUES</a>
-                    <a href="pages/registration.html">INSCRIPTION</a>
+                    <a href="pages/inscription.html">INSCRIPTION</a>
                     <a href="pages/contact.html">CONTACT</a>
                 </div>
                 <div class="footer-contact">
