--- a/public/pages/evenements.html
+++ b/public/pages/evenements.html
@@ -6,7 +6,7 @@
         <link rel="icon" href="../assets/logos/Logo_CSLR.png" type="image/x-icon">
         <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@24,400,0,0" />
         <link href='../css/header.css' rel='stylesheet'>
-        <link href='../css/registration.css' rel='stylesheet'>
+        <link href='../css/evenements.css' rel='stylesheet'>
         <link href='../css/footer.css' rel='stylesheet'>
         <title>CSLR - Basket</title>
     </head>
@@ -16,7 +16,7 @@
                 <div class="bar"></div>
                 <a href="../index.html">LE CLUB</a>
                 <div class="bar"></div>
-                <a href="teams.html">EQUIPES</a>
+                <a href="equipes.html">EQUIPES</a>
                 <div class="bar"></div>
                 <a href="events.html">EVENEMENTS</a>
                 <div class="bar"></div>
@@ -40,9 +40,9 @@
 
             <div class="right-content">
                 <div class="bar"></div>
-                <a  href="store.html">BOUTIQUE</a>
+                <a  href="boutique.html">BOUTIQUE</a>
                 <div class="bar"></div>
-                <a href="registration.html">INSCRIPTION</a>
+                <a href="inscription.html">INSCRIPTION</a>
                 <div class="bar"></div>
                 <a  href="contact.html">CONTACT</a>
                 <div class="bar"></div>
@@ -53,10 +53,10 @@
             <div class="nav-menu">
                 <h2>NAVIGATION</h2>
                 <a href="../index.html">LE CLUB</a>
-                <a href="teams.html">EQUIPES</a>
+                <a href="equipes.html">EQUIPES</a>
                 <a href="events.html">EVENEMENTS</a>
-                <a href="store.html">BOUTIQUE</a>
-                <a href="store.html">INSCRIPTION</a>
+                <a href="boutique.html">BOUTIQUE</a>
+                <a href="inscription.html">INSCRIPTION</a>
                 <a href="contact.html">CONTACT</a>
             </div>
                 
@@ -89,9 +89,11 @@
                 <div class="footer-links">
                     <h4>NAVIGATION</h4>
                     <a href="../index.html">LE CLUB</a>
-                    <a href="teams.html">EQUIPES</a>
-                    <a href="events.html">EVENEMENTS</a>
-                    <a href="store.html">BOUTIQUE</a>
+                    <a href="equipes.html">EQUIPES</a>
+                    <a href="evenements.html">EVENEMENTS</a>
+                    <a href="boutique.html">BOUTIQUES</a>
+                    <a href="inscription.html">INSCRIPTION</a>
+                    <a href="contact.html">CONTACT</a>
                 </div>
                 <div class="footer-contact">
                     <h4>CONTACT</h4>
