adding files and structure for the website

--- a/public/pages/evenements.html
+++ b/public/pages/evenements.html
@@ -18,7 +18,7 @@
                 <div class="bar"></div>
                 <a href="equipes.html">EQUIPES</a>
                 <div class="bar"></div>
-                <a href="events.html">EVENEMENTS</a>
+                <a href="evenements.html">EVENEMENTS</a>
                 <div class="bar"></div>
             </div>
 
@@ -54,7 +54,7 @@
                 <h2>NAVIGATION</h2>
                 <a href="../index.html">LE CLUB</a>
                 <a href="equipes.html">EQUIPES</a>
-                <a href="events.html">EVENEMENTS</a>
+                <a href="evenements.html">EVENEMENTS</a>
                 <a href="boutique.html">BOUTIQUE</a>
                 <a href="inscription.html">INSCRIPTION</a>
                 <a href="contact.html">CONTACT</a>
@@ -77,6 +77,48 @@
         <main>
             <div id="work-in-progress">
                 <h1>Cette page est en cours de constuction</h1>
+            </div>
+
+            <div id="events">
+                <h2>Nos evenements</h2>
+                <section>
+                    <h3>Notre année 2024</h3>
+                    <div class="container">
+                        <div class="line"></div>
+                        <div class="box">
+                            <div class="image-container">
+                                <img src="./../assets/gallerie/test_gallery.jpeg" alt="">
+                            </div>
+                            <div class="content">
+                                <h4>titre</h4>
+                                <p>Courte description</p>
+                                <a href="./events/#">Lire l'article</a>
+                            </div>
+                        </div>
+
+                        <div class="box">
+                            <div class="image-container">
+                                <img src="./../assets/gallerie/test_gallery.jpeg" alt="">
+                            </div>
+                            <div class="content">
+                                <h4>titre</h4>
+                                <p>Courte description</p>
+                                <a href="./events/#">Lire l'article</a>
+                            </div>
+                        </div>
+
+                        <div class="box">
+                            <div class="image-container">
+                                <img src="./../assets/gallerie/test_gallery.jpeg" alt="">
+                            </div>
+                            <div class="content">
+                                <h4>titre</h4>
+                                <p>Courte description</p>
+                                <a href="./events/#">Lire l'article</a>
+                            </div>
+                        </div>
+                    </div>
+                </section>
             </div>
         </main>
         
