Adding the new section on the index

--- a/public/index.html
+++ b/public/index.html
@@ -77,13 +77,73 @@
         </nav> 
 
         <main>
+            <div id="club-info">
+                <div class="actualites">
+                    <h2>Actualités du Club</h2>
+                    <ul class="actualites-list">
+                        <li class="actualite-item">
+                            <img style="height: 100px; width: auto;" class="actualite-image" src="assets/logos/Logo_CSLR.png">
+                            <div class="actualite-content">
+                                <h3>Le voyage à New-York</h3>
+                                <p>Courte description de l'actualité 1...</p>
+                                <a href="">lire la suite</a>
+                            </div>
+                        </li>
+                        <li class="actualite-item">
+                            <img style="height: 100px; width: auto;" class="actualite-image" src="assets/logos/Logo_CSLR.png">
+                            <div class="actualite-content">
+                                <h3>La Galette du CSLR</h3>
+                                <p>Courte description de l'actualité 2...</p>
+                                <a href="">lire la suite</a>
+                            </div>
+                        </li>
+                        <li class="actualite-item">
+                            <img style="height: 100px; width: auto;" class="actualite-image" src="assets/logos/Logo_CSLR.png">
+                            <div class="actualite-content">
+                                <h3>Les olympiades de l'inclusion</h3>
+                                <p>Courte description de l'actualité 2...</p>
+                                <a href="">lire la suite</a>
+                            </div>
+                        </li>
+                    </ul>
+                    <div class="button-container">
+                        <a href="autre-page.html" class="access-button">Voir tous nos Evénements</a>
+                    </div>
+                </div>
+            
+                <div class="matchs">
+                    <h2>Matchs de ce weekend :</h2>
+                    <div class="sex">
+                        <h3>Equipes Féminines</h3>
+                        <p>U11: CSLR - </p>
+                        <p>U13: CSLR - </p>
+                    </div>
+                    <div class="sex">
+                        <h3>Equipes Mixtes</h3>
+                        <p>U-9: CSLR - </p>
+                        <p>U-11: CSLR - </p>
+                    </div>
+                    <div class="sex">
+                        <h3>Equipes Masculines</h3>
+                        <p>U-13: CSLR - </p>
+                        <p>U-15: CSLR - </p>
+                        <p>Senior 1: Union CTC - </p>
+                        <p>Senior 2: CSLR - </p>
+                        <p>Senior 3: CSLR - </p>
+                    </div>
+                    </div>
+                </div>
+            </div>
+
             <div id="presentation">
-                <h2>NOTRE HISTOIRE</h2>
                 <div class="presentation-container">
                     <img src="assets/gallerie/test_gallery.jpeg" alt="">
                     <div class="content">
                         <h3>L'histoire du Cercle Sportif Lilas Romainville</h3>
-                        <p>texte qui presente le club et son histoire</p>
+                        <p>- Le Cercle Sportif des Lilas (CSL), créé en 1941, a émergé comme un Club Omnisports pendant la Seconde Guerre mondiale. Dirigé par les mêmes quatre responsables de 1941 à 1966, le club a vu la création de diverses sections sportives.<br>
+                            <br>- En 1952, la section de basket-ball a été lancée par Monsieur Daniel Thurmine. Au fil des années, le CSL a évolué, changeant de dénomination plusieurs fois. En 2014, une convention avec la ville de Romainville a été signée, et le club est devenu le Cercle Sportif Lilas Romainville Basket (CSLR Basket).<br>
+                            <br>- En 2013, le CSL a formé la CTC Union Elite en collaboration avec d'autres clubs. Le club a connu des succès, remportant notamment le championnat régional (2ème division) des séniors masculins en 2021-2022.<br>
+                            <br>- Les présidents successifs incluent M. Aimé Jolivet, M. Lucien Serouville, M. Daniel Duquesnes, M. Bernard Boyer, Mme Sandrine Rousselle, M. Florian Groll, et actuellement Mme Nina Rubini depuis juin 2022.</p>
                     </div>
                 </div> 
             </div> 
@@ -119,7 +179,7 @@
                     <a href="index.html">LE CLUB</a>
                     <a href="pages/equipes.html">EQUIPES</a>
                     <a href="pages/evenements.html">EVENEMENTS</a>
-                    <a href="pages/boutique.html">BOUTIQUES</a>
+                    <a href="pages/boutique.html">BOUTIQUE</a>
                     <a href="pages/inscription.html">INSCRIPTION</a>
                     <a href="pages/contact.html">CONTACT</a>
                 </div>
