--- a/public/pages/equipes.html
+++ b/public/pages/equipes.html
@@ -98,11 +98,11 @@
                                 <div class="line"></div>
                             </div>
                             <div class="description">
-                                <h4>Niveau : Départemental - Division 2</h4>
+                                <h4>Championnat : Départemental - Division 2</h4>
                                 <h4>Entraineurs :</h4>
-                                <p>- Malcolm, Jules</p>
+                                <p>- Crory, Nina, Kiri-Yang</p>
                                 <h4>Assistants :</h4>
-                                <p>- Pas d'assistants</p>
+                                <p>- Nanou, Bakary, Gaoussou </p>
                             </div>
                             <a href="">Voir les résultats</a>
                         </div>
@@ -117,7 +117,7 @@
                                 <div class="line"></div>
                             </div>
                             <div class="description">
-                                <h4>Niveau : </h4>
+                                <h4>Championnat : Départemental - Division 3</h4>
                                 <h4>Entraineurs :</h4>
                                 <p>- Crory, Nina, Kiri-Yang</p>
                                 <h4>Assistants :</h4>
@@ -141,7 +141,7 @@
                                 <div class="line"></div>
                             </div>
                             <div class="description">
-                                <h4>Niveau : Départemental - Division 2</h4>
+                                <h4>Championnat : Pas de Championnat</h4>
                                 <h4>Entraineurs :</h4>
                                 <p>- Nina, Lat, Max, Olivier</p>
                                 <h4>Assistants :</h4>
@@ -160,7 +160,7 @@
                                 <div class="line"></div>
                             </div>
                             <div class="description">
-                                <h4>Niveau : Départemental - Division 2</h4>
+                                <h4>Championnat : Départemental</h4>
                                 <h4>Entraineurs :</h4>
                                 <p>- Malcolm, Erwan, Jules</p>
                                 <h4>Assistants :</h4>
@@ -180,7 +180,7 @@
                                 <div class="line"></div>
                             </div>
                             <div class="description">
-                                <h4>Niveau : Départemental - Division 2</h4>
+                                <h4>Championnat : Départemental - Division 2</h4>
                                 <h4>Entraineurs :</h4>
                                 <p>- Jules, Malcolm</p>
                                 <h4>Assistants :</h4>
@@ -204,7 +204,7 @@
                                 <div class="line"></div>
                             </div>
                             <div class="description">
-                                <h4>Niveau : Départemental - Division 2</h4>
+                                <h4>Championnat : Départemental</h4>
                                 <h4>Entraineurs :</h4>
                                 <p>- Malcolm, David</p>
                                 <h4>Assistants :</h4>
@@ -223,7 +223,7 @@
                                 <div class="line"></div>
                             </div>
                             <div class="description">
-                                <h4>Niveau : Départemental - Division 2</h4>
+                                <h4>Championnat : Départemental - Division 2</h4>
                                 <h4>Entraineurs :</h4>
                                 <p>- Yanis, Nassim</p>
                                 <h4>Assistants :</h4>
@@ -243,7 +243,7 @@
                                 <div class="line"></div>
                             </div>
                             <div class="description">
-                                <h4>Niveau : Départemental - Division 2</h4>
+                                <h4>Championnat : Régional - Division 2</h4>
                                 <h4>Entraineurs :</h4>
                                 <p>- Alexandre</p>
                                 <h4>Assistants :</h4>
@@ -262,7 +262,7 @@
                                 <div class="line"></div>
                             </div>
                             <div class="description">
-                                <h4>Niveau : Départemental - Division 2</h4>
+                                <h4>Championnat : Pré régional</h4>
                                 <h4>Entraineurs :</h4>
                                 <p>- Reda</p>
                                 <h4>Assistants :</h4>
@@ -282,7 +282,7 @@
                                 <div class="line"></div>
                             </div>
                             <div class="description">
-                                <h4>Niveau : Départemental - Division 2</h4>
+                                <h4>Championnat : Départemental - Division 2</h4>
                                 <h4>Entraineurs :</h4>
                                 <p>- Teddy</p>
                                 <h4>Assistants :</h4>
@@ -301,7 +301,7 @@
                                 <div class="line"></div>
                             </div>
                             <div class="description">
-                                <h4>Niveau : Loisirs</h4>
+                                <h4>Championnat : Loisirs</h4>
                                 <h4>Entraineurs :</h4>
                                 <p>- Jean-Christian, Erwan</p>
                                 <h4>Assistants :</h4>
@@ -328,7 +328,7 @@
                     <a href="../index.html">LE CLUB</a>
                     <a href="equipes.html">EQUIPES</a>
                     <a href="evenements.html">EVENEMENTS</a>
-                    <a href="boutique.html">BOUTIQUES</a>
+                    <a href="boutique.html">BOUTIQUE</a>
                     <a href="inscription.html">INSCRIPTION</a>
                     <a href="contact.html">CONTACT</a>
                 </div>
