--- a/public/pages/inscription.html
+++ b/public/pages/inscription.html
@@ -91,7 +91,7 @@
                     <a href="../index.html">LE CLUB</a>
                     <a href="equipes.html">EQUIPES</a>
                     <a href="evenements.html">EVENEMENTS</a>
-                    <a href="boutique.html">BOUTIQUES</a>
+                    <a href="boutique.html">BOUTIQUE</a>
                     <a href="inscription.html">INSCRIPTION</a>
                     <a href="contact.html">CONTACT</a>
                 </div>
