Adding events and modifying home page

--- a/public/pages/boutique.html
+++ b/public/pages/boutique.html
@@ -212,6 +212,24 @@
                             <div class="prix">15€</div>
                         </div>
                     </div>
+
+                    <div class="card">
+                        <div class="image-container">
+                            <img id="productImage" src="./../assets/store/T-shirt/New-York/white.jpg" alt="">
+                        </div>
+                        <div class="content">
+                            <h2>T-Shirt CSLR</h2>
+                            <p>Edition New-York</p>
+                            <div class="size-container">
+                                <div class="size">XS</div>
+                                <div class="size">S</div>
+                                <div class="size">M</div>
+                                <div class="size">L</div>
+                                <div class="size">XL</div>
+                            </div>
+                            <div class="prix">15€</div>
+                        </div>
+                    </div>
                 </div>              
             </div>
 
@@ -220,7 +238,7 @@
                     <h2>FOIRE AUX QUESTIONS</h2>
                     <div class="question-reponse">
                         <h3>Peut-on faire floquer un T-shirt ou un Sweat ?</h3>
-                        <p>Oui il est possible de faire floquer un Sweat ou un T-shirt lors des evenements organisé par le club.</p>
+                        <p>Oui il est possible de faire floquer un Sweat ou un T-shirt lors des évenements organisé par le club.</p>
                     </div>
 
                     <div class="question-reponse">
@@ -254,12 +272,18 @@
                     </div>
 
                     <div class="input">
-                        <label for="modele">Modele</label>
-                        <select id="modele" name="modele" required>
-                            <option value="T-shirt Classique">T-Shirt Classique</option>
-                            <option value="Sweat Classique">Sweat Classique</option>
-                            <option value="Tshirt NY">T-Shirt New-York</option>
-                            <option value="Sweat NY">Sweat New-York</option>
+                        <label for="type">Type</label>
+                        <select id="type" name="type" required>
+                            <option value="T-shirt">T-Shirt</option>
+                            <option value="Sweat">Sweat</option>
+                        </select>
+                    </div>
+
+                    <div class="input">
+                        <label for="edition">Edition</label>
+                        <select id="edition" name="edition" required>
+                            <option value="Classique">Classique</option>
+                            <option value="New-York">New-York</option>
                         </select>
                     </div>
                    
