--- a/public/pages/equipes.html
+++ b/public/pages/equipes.html
@@ -79,12 +79,14 @@
                 <h1>Cette page est en cours de constuction</h1>
             </div>
 
+             <div id="page-nav">
+                <div id="fem" class="categorie active">Féminines</div>
+                <div id="mix" class="categorie">Mixtes</div>
+                <div id="mas" class="categorie">Masculines</div>
+            </div>
+
             <div id="equipes">
-                <div class="page-nav">
-                    <div id="fem" class="sex active">Féminines</div>
-                    <div id="mix" class="sex">Mixtes</div>
-                    <div id="mas" class="sex">Masculines</div>
-                </div>
+
 
                 <div class="equipes-feminines">
                     <h2>Les Equipes Féminines</h2>
