--- a/public/pages/evenements.html
+++ b/public/pages/evenements.html
@@ -79,41 +79,103 @@
                 <h1>Cette page est en cours de constuction</h1>
             </div>
 
-            <div id="events">
-                <h2>Nos evenements</h2>
+            <div id="page-nav">
+                <div id="club" class="categorie active">Club</div>
+                <div id="plateau" class="categorie">Plateaux</div>
+                <div id="stage" class="categorie">Stages</div>
+            </div>
+
+            <div class="evenements-club">
+                <div class="container"> 
+                    <div class="box">
+                        <img class="horizontal-image" src="./../assets/evenements/New_York_2024/Presentation.jpeg" alt="">
+                        <div class="content">
+                            <h4>Le voyage à New-York du CSLR</h4>
+                            <h5>05 Février 2024</h5>
+                            <a href="./evenements/New_York_2024.html">Lire l'article</a>
+                        </div>
+                    </div>
+                    
+                    <div class="box">
+                        <img class="horizontal-image" src="./../assets/evenements/Galette/Presentation.jpeg" alt="">
+                        <div class="content">
+                            <h4>La Galette des rois du CSLR</h4>
+                            <h5>26 Janvier 2024</h5>
+                            <a class="link" href="./evenements/Gallete.html">Lire l'article</a>
+                        </div>
+                    </div>
+
+                    <div class="box">
+                        <img class="vertical-image" src="./../assets/evenements/Olympiades_Inclusion_23/Olympiades.png" alt="">
+                        <div class="content">
+                            <h4>Olympiades de l'inclusion</h4>
+                            <h5>13 Janvier 2024</h5>
+                            <a href="./evenements/Olympiades_2024.html">Lire l'article</a>
+                        </div>
+                    </div>
+
+                    <div class="box">
+                        <img class="horizontal-image" src="./../assets/evenements/Sortie_Grand_Rex/Presentation.jpeg" alt="">
+                        <div class="content">
+                            <h4>Le Grand Rex pour nos U-11F, U-13F et U-15F</h4>
+                            <h5>27 Décembre 2023</h5>
+                            <a href="./evenements/Sortie_Grand_Rex.html">Lire l'article</a>
+                        </div>
+                    </div>
+
+                    <div class="box">
+                        <img class="horizontal-image" src="./../assets/evenements/Sortie_Bowling_U13/Presentation.jpeg" alt="">
+                        <div class="content">
+                            <h4>Sortie Bowling et Laser-Game pour les U-13M</h4>
+                            <h5>27 Décembre 2023</h5>
+                            <a href="./evenements/Sortie_Noel_U13.html">Lire l'article</a>
+                        </div>
+                    </div>
+
+                    <div class="box">
+                        <img class="horizontal-image" src="./../assets/evenements/Sortie_Noel_U15/Presentation.jpeg" alt="">
+                        <div class="content">
+                            <h4>Sortie Karting et Laser-Game pour les U-15M <br> </h4>
+                            <h5>26 Décembre 2023</h5>
+                            <a href="./evenements/Sortie_Noel_U15.html">Lire l'article</a>
+                        </div>
+                    </div>
+
+                    <div class="box">
+                        <img class="horizontal-image" src="./../assets/evenements/Noel_U7/Presentation.jpeg" alt="">
+                        <div class="content">
+                            <h4>Le Père Noël à l'entraînement des U7/Baby-Basket.</h4>
+                            <h5>17 Décemebre 2032</h5>
+                            <a href="./evenements/Noel_Baby_basket.html">Lire l'article</a>
+                        </div>
+                    </div>
+
+                </div>
+            </div>
+
+            <div class="evenements-plateaux">
                 <section>
-                    <h3>Notre année 2024</h3>
                     <div class="container">
-                        <div class="line"></div>
                         <div class="box">
-                            <div class="image-container">
-                                <img src="./../assets/gallerie/test_gallery.jpeg" alt="">
-                            </div>
+                            <img class="horizontal-image" src="./../assets/gallerie/test_gallery.jpeg" alt="">
                             <div class="content">
-                                <h4>titre</h4>
-                                <p>Courte description</p>
+                                <h4>Plateau de la gallete des rois U-9</h4>
+                                <h5>22 janvier 2024</h5>
                                 <a href="./events/#">Lire l'article</a>
                             </div>
                         </div>
+                    </div>
+                </section>
+            </div>
 
+            <div class="evenements-stages">
+                <section>
+                    <div class="container">
                         <div class="box">
-                            <div class="image-container">
-                                <img src="./../assets/gallerie/test_gallery.jpeg" alt="">
-                            </div>
+                            <img class="horizontal-image" src="./../assets/gallerie/test_gallery.jpeg" alt="">
                             <div class="content">
-                                <h4>titre</h4>
-                                <p>Courte description</p>
-                                <a href="./events/#">Lire l'article</a>
-                            </div>
-                        </div>
-
-                        <div class="box">
-                            <div class="image-container">
-                                <img src="./../assets/gallerie/test_gallery.jpeg" alt="">
-                            </div>
-                            <div class="content">
-                                <h4>titre</h4>
-                                <p>Courte description</p>
+                                <h4>Plateau de la gallete des rois U-9</h4>
+                                <h5>22 janvier 2024</h5>
                                 <a href="./events/#">Lire l'article</a>
                             </div>
                         </div>
@@ -162,6 +224,7 @@
                 <p>© 2024 - CSLR. Tous droits réservés.</p>
             </div>
         </footer>
-        <script src="./../js/header.js"></script>
+        <script src="../js/header.js"></script>
+        <script src="../js/evenements.js"></script>
     </body>
 </html>
