--- a/public/pages/inscription.html
+++ b/public/pages/inscription.html
@@ -75,6 +75,11 @@
             </div>
         </nav>     
         <main>
+            <div id="page-nav">
+                <div id="accueil" class="categorie active">Club</div>
+                <div id="histoire" class="categorie">Stages</div>
+            </div>
+
             <div id="work-in-progress">
                 <h1>Cette page est en cours de constuction</h1>
             </div>
