Adding all the content and modifying some pages

--- a/public/pages/inscription.html
+++ b/public/pages/inscription.html
@@ -32,8 +32,6 @@
                 <div class="header-social-media">
                     <a href="#"><img style="width: 20px; height: auto;" src="../assets/social_media_kit/Instagram_icon.png" alt=""></a>
                     <a href="#"><img style="width: 20px; height: auto;" src="../assets/social_media_kit/Facebook_icon.png" alt=""></a>
-                    <a href="#"><img style="width: 20px; height: auto;" src="../assets/social_media_kit/Youtube_icon.png" alt=""></a>
-                    <a href="#"><img style="width: 20px; height: auto;" src="../assets/social_media_kit/Twitter_icon.png" alt=""></a>
                 </div>
             </div>
 
@@ -65,8 +63,6 @@
                 <div class="nav-social-media">
                     <a href="#"><img style="width: 24px; height: auto;" src="../assets/social_media_kit/Instagram_icon.png" alt=""></a>
                     <a href="#"><img style="width: 24px; height: auto;" src="../assets/social_media_kit/Facebook_icon.png" alt=""></a>
-                    <a href="#"><img style="width: 24px; height: auto;" src="../assets/social_media_kit/Youtube_icon.png" alt=""></a>
-                    <a href="#"><img style="width: 24px; height: auto;" src="../assets/social_media_kit/Twitter_icon.png" alt=""></a>
                 </div>
 
                 <div class="nav-copyright">
@@ -76,12 +72,26 @@
         </nav>     
         <main>
             <div id="page-nav">
-                <div id="accueil" class="categorie active">Club</div>
-                <div id="histoire" class="categorie">Stages</div>
+                <div id="inscription-nav" class="categorie active">Inscriptions</div>
+                <div style="display: none;" id="nav-stages" class="categorie">Stages</div>
             </div>
 
             <div id="work-in-progress">
                 <h1>Cette page est en cours de constuction</h1>
+            </div>
+
+            <div id="inscription-club">
+                <article>
+                    <h2>Bienvenue au CSLR Basket !</h2>
+
+                    <p>Nous sommes ravis de voir votre intérêt pour notre club de basket. Actuellement, nous ne sommes pas en mesure d'accepter de nouvelles inscriptions, mais ne vous inquiétez pas, nous nous préparons pour la prochaine saison !</p>
+
+                    <p>Si vous êtes impatient(e) de faire partie de l'aventure CSLR Basket, n'hésitez pas à nous contacter en utilisant le formulaire ci-dessous. Nous serons ravis de répondre à toutes vos questions, de discuter, et de vous tenir informé(e) dès que les inscriptions pour la prochaine saison seront ouvertes.</p>
+
+                    <p>Votre intérêt et votre enthousiasme sont précieux pour nous, et nous sommes impatients de vous accueillir prochainement. Suivez-nous sur les réseaux sociaux pour rester informé(e) de toutes les actualités et annonces importantes.</p>
+
+                    <p class="event-details">L'équipe du CSLR Basket</p>
+                </article>
             </div>
         </main>
         
@@ -116,8 +126,6 @@
                 <div class="footer-social-media">
                     <a href="#"><img style="width: 24px; height: auto;" src="../assets/social_media_kit/Instagram_icon.png" alt=""></a>
                     <a href="#"><img style="width: 24px; height: auto;" src="../assets/social_media_kit/Facebook_icon.png" alt=""></a>
-                    <a href="#"><img style="width: 24px; height: auto;" src="../assets/social_media_kit/Youtube_icon.png" alt=""></a>
-                    <a href="#"><img style="width: 24px; height: auto;" src="../assets/social_media_kit/Twitter_icon.png" alt=""></a>
                 </div>
             </div>
 
