--- a/public/pages/contact.html
+++ b/public/pages/contact.html
@@ -33,8 +33,6 @@
                 <div class="header-social-media">
                     <a href="#"><img style="width: 20px; height: auto;" src="../assets/social_media_kit/Instagram_icon.png" alt=""></a>
                     <a href="#"><img style="width: 20px; height: auto;" src="../assets/social_media_kit/Facebook_icon.png" alt=""></a>
-                    <a href="#"><img style="width: 20px; height: auto;" src="../assets/social_media_kit/Youtube_icon.png" alt=""></a>
-                    <a href="#"><img style="width: 20px; height: auto;" src="../assets/social_media_kit/Twitter_icon.png" alt=""></a>
                 </div>
             </div>
 
@@ -66,8 +64,6 @@
                 <div class="nav-social-media">
                     <a href="#"><img style="width: 24px; height: auto;" src="../assets/social_media_kit/Instagram_icon.png" alt=""></a>
                     <a href="#"><img style="width: 24px; height: auto;" src="../assets/social_media_kit/Facebook_icon.png" alt=""></a>
-                    <a href="#"><img style="width: 24px; height: auto;" src="../assets/social_media_kit/Youtube_icon.png" alt=""></a>
-                    <a href="#"><img style="width: 24px; height: auto;" src="../assets/social_media_kit/Twitter_icon.png" alt=""></a>
                 </div>
 
                 <div class="nav-copyright">
@@ -104,6 +100,8 @@
                         <label for="subject">Sujet de votre message</label>
                         <select id="subject" name="subject" required>
                             <option value="Demande d'information">Information</option>
+                            <option value="Inscription">Inscription</option>
+                            <option value="Partenariat">Partenariat</option>
                             <option value="Autre">Autre</option>
                         </select>
                     </div>
@@ -174,8 +172,6 @@
                 <div class="footer-social-media">
                     <a href="#"><img style="width: 24px; height: auto;" src="../assets/social_media_kit/Instagram_icon.png" alt=""></a>
                     <a href="#"><img style="width: 24px; height: auto;" src="../assets/social_media_kit/Facebook_icon.png" alt=""></a>
-                    <a href="#"><img style="width: 24px; height: auto;" src="../assets/social_media_kit/Youtube_icon.png" alt=""></a>
-                    <a href="#"><img style="width: 24px; height: auto;" src="../assets/social_media_kit/Twitter_icon.png" alt=""></a>
                 </div>
             </div>
 
