--- a/public/pages/evenements.html
+++ b/public/pages/evenements.html
@@ -32,8 +32,6 @@
                 <div class="header-social-media">
                     <a href="#"><img style="width: 20px; height: auto;" src="../assets/social_media_kit/Instagram_icon.png" alt=""></a>
                     <a href="#"><img style="width: 20px; height: auto;" src="../assets/social_media_kit/Facebook_icon.png" alt=""></a>
-                    <a href="#"><img style="width: 20px; height: auto;" src="../assets/social_media_kit/Youtube_icon.png" alt=""></a>
-                    <a href="#"><img style="width: 20px; height: auto;" src="../assets/social_media_kit/Twitter_icon.png" alt=""></a>
                 </div>
             </div>
 
@@ -65,8 +63,6 @@
                 <div class="nav-social-media">
                     <a href="#"><img style="width: 24px; height: auto;" src="../assets/social_media_kit/Instagram_icon.png" alt=""></a>
                     <a href="#"><img style="width: 24px; height: auto;" src="../assets/social_media_kit/Facebook_icon.png" alt=""></a>
-                    <a href="#"><img style="width: 24px; height: auto;" src="../assets/social_media_kit/Youtube_icon.png" alt=""></a>
-                    <a href="#"><img style="width: 24px; height: auto;" src="../assets/social_media_kit/Twitter_icon.png" alt=""></a>
                 </div>
 
                 <div class="nav-copyright">
@@ -82,7 +78,7 @@
             <div id="page-nav">
                 <div id="club" class="categorie active">Club</div>
                 <div id="plateau" class="categorie">Plateaux</div>
-                <div id="stage" class="categorie">Stages</div>
+                <div style="display: none;" id="stage" class="categorie">Stages</div>
             </div>
 
             <div class="evenements-club">
@@ -101,7 +97,7 @@
                         <div class="content">
                             <h4>La Galette des rois du CSLR</h4>
                             <h5>26 Janvier 2024</h5>
-                            <a class="link" href="./evenements/Gallete.html">Lire l'article</a>
+                            <a class="link" href="./evenements/Galette.html">Lire l'article</a>
                         </div>
                     </div>
 
@@ -117,7 +113,7 @@
                     <div class="box">
                         <img class="horizontal-image" src="./../assets/evenements/Sortie_Grand_Rex/Presentation.jpeg" alt="">
                         <div class="content">
-                            <h4>Le Grand Rex pour nos U-11F, U-13F et U-15F</h4>
+                            <h4>Le Grand Rex pour nos équipes féminines </h4>
                             <h5>27 Décembre 2023</h5>
                             <a href="./evenements/Sortie_Grand_Rex.html">Lire l'article</a>
                         </div>
@@ -157,11 +153,11 @@
                 <section>
                     <div class="container">
                         <div class="box">
-                            <img class="horizontal-image" src="./../assets/gallerie/test_gallery.jpeg" alt="">
+                            <img class="vertical-image" src="../assets/evenements/Plateaux/Plateau_galette_2024/Presentation.jpg" alt="">
                             <div class="content">
                                 <h4>Plateau de la gallete des rois U-9</h4>
                                 <h5>22 janvier 2024</h5>
-                                <a href="./events/#">Lire l'article</a>
+                                <a href="./evenements/Plateaux/Plateau_galette_2024.html">Lire l'article</a>
                             </div>
                         </div>
                     </div>
@@ -215,8 +211,6 @@
                 <div class="footer-social-media">
                     <a href="#"><img style="width: 24px; height: auto;" src="../assets/social_media_kit/Instagram_icon.png" alt=""></a>
                     <a href="#"><img style="width: 24px; height: auto;" src="../assets/social_media_kit/Facebook_icon.png" alt=""></a>
-                    <a href="#"><img style="width: 24px; height: auto;" src="../assets/social_media_kit/Youtube_icon.png" alt=""></a>
-                    <a href="#"><img style="width: 24px; height: auto;" src="../assets/social_media_kit/Twitter_icon.png" alt=""></a>
                 </div>
             </div>
 
